added auth layout and firebase setup

--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,52 @@
   font-optical-sizing: auto;
 }
 
+
 @import "tailwindcss";
-@plugin "daisyui";
+
+@plugin "daisyui" {
+  themes: light --default;
+}
+
+/* 
+
+@plugin "daisyui/theme" {
+  name: "light";
+  default: true;
+  --color-primary: #3C65F5;
+  --color-secondary: #007eff;
+  --color-accent: #706f6f;
+}
+
+@plugin "daisyui/theme" {
+  name: "dark";
+  --color-primary: #3C65F5;
+  --color-secondary: #007eff;
+  --color-accent: #706f6f;
+} */
+
+
+.bg-img{
+  background-image: url('../src/assets/be-a-merchant-bg.png');
+  background-repeat: no-repeat;
+}
+
+a.active {
+  color: #3C65F5;
+}
+
+a.pending {
+  color: blue;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
